--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage[rightcaption]{sidecap}
+\sidecaptionvpos{figure}{c}
 \usepackage{hhline}
 \usepackage{amsmath}
 \usepackage{amssymb}
