Scaling test and rod cusping

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4219,3 +4219,39 @@ INIS Reference Number: 47042668},
 	urldate = {2024-11-09},
 	file = {arfc/squirrel\: A MOOSE library for Moltres and Zapdos:C\:\\Users\\Sun Myung\\Zotero\\storage\\T74WCFJU\\squirrel.html:text/html},
 }
+
+@article{graham_subplane_2018,
+	title = {Subplane collision probabilities method applied to control rod cusping in {2D}/{1D}},
+	volume = {118},
+	issn = {0306-4549},
+	url = {https://www.sciencedirect.com/science/article/pii/S0306454918301518},
+	doi = {10.1016/j.anucene.2018.03.033},
+	abstract = {The MPACT code is being jointly developed by the University of Michigan and Oak Ridge National Laboratory. It uses the 2D/1D method to solve neutron transport problems for reactors. The 2D/1D method decomposes the problem into a stack of 2D planes, and uses a high fidelity transport method to resolve all heterogeneity in each plane. These planes are then coupled axially using a lower order solver. Using this scheme, 3D solutions to the transport equation can be obtained at a much lower cost. One assumption made by the 2D/1D method is that the materials are axially homogeneous for each 2D plane. Violation of this assumption requires homogenization, which can significantly reduce the accuracy of the calculation. This paper presents two new subgrid methods to address this issue. The first method is polynomial decusping, a simple correction used to address control rods partially inserted into a 2D plane. The second is the subplane collision probabilities method, which is a more accurate, more robust subgrid method that can be applied to other axial heterogeneities. Each method was applied to a variety of problems. Results were compared to fine mesh solutions which had no axial heterogeneity and to Monte Carlo reference solutions generated using KENO-VI. It was shown that the polynomial decusping method was effective in many cases, but it had some limitations, with 3D pin power errors as high as 25\% compared to KENO-VI. The subplane collision probabilities method performed much better, lowering the maximum pin power error to less than 5\% in every calculation.},
+	urldate = {2024-11-23},
+	journal = {Annals of Nuclear Energy},
+	author = {Graham, Aaron and Collins, Benjamin and Stimpson, Shane and Downar, Thomas},
+	month = aug,
+	year = {2018},
+	keywords = {2D/1D, Rod cusping, Subgrid methods},
+	pages = {1--14},
+	file = {ScienceDirect Snapshot:C\:\\Users\\Sun Myung\\Zotero\\storage\\Y8HIEE5B\\S0306454918301518.html:text/html},
+}
+
+@article{yamamoto_simple_2004,
+	title = {A {Simple} and {Efficient} {Control} {Rod} {Cusping} {Model} for {Three}-{Dimensional} {Pin}-by-{Pin} {Core} {Calculations}},
+	volume = {145},
+	issn = {0029-5450},
+	url = {https://doi.org/10.13182/NT145-11},
+	doi = {10.13182/NT145-11},
+	abstract = {A new solution for the control rod cusping problem in the three-dimensional pin-by-pin core calculation is proposed in this paper. The current advanced nodal code resolves this issue by estimating the one-dimensional axial flux distribution in a partially rodded node. However, direct application of this approach to the three-dimensional pin-by-pin calculation is impractical since the leakage effect in the radial direction is significant and the one-dimensional model for axial flux distribution is no longer valid. This issue has been neither addressed nor resolved yet. In this paper, a new approach that utilizes the inverse of the spectral index obtained in the assembly calculation is used to estimate the flux distribution inside the partially rodded mesh. The proposed model was implemented in the SCOPE2 code, which is a three-dimensional pin-by-pin nodal-transport code for pressurized water reactor core calculations, and a verification calculation was carried out to confirm the validity of the proposed method. From the calculation results, oscillation in the differential worth of control rods (i.e., the cusping effect) is damped, and the proposed model can almost reproduce that obtained by the reference calculation. The additional computation time for the proposed model is negligible. Consequently, the proposed control rod cusping model is an attractive method in three-dimensional pin-by-pin calculations.},
+	number = {1},
+	urldate = {2024-11-23},
+	journal = {Nuclear Technology},
+	author = {Yamamoto, Akio},
+	month = jan,
+	year = {2004},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.13182/NT145-11},
+	pages = {11--17},
+	file = {Full Text PDF:C\:\\Users\\Sun Myung\\Zotero\\storage\\EDTNJNB2\\Yamamoto - 2004 - A Simple and Efficient Control Rod Cusping Model f.pdf:application/pdf},
+}
