Flowchart & u233 temp coef

--- a/msre.tex
+++ b/msre.tex
@@ -1282,7 +1282,7 @@ $k_\text{eff}$ values exhibit some discrepancies relative to OpenMC, but the dis
 affect rod worth estimates because they are systematic errors. This \gls{MSRE} hybrid model may be
 improved in future work by characterizing and applying neutron albedo at the vacuum boundaries.
 
-\subsubsection{Temperature Reactivity Coefficient}
+\subsubsection{Temperature Reactivity Coefficient} \label{sec:temp-coef}
 
 This work compares isothermal temperature reactivity coefficients calculated from $k_\text{eff}$
 values measured at 872 K and 972 K with 67.86 $^{235}$U loading. This approach is identical to that
