tikz preamble for previous commit

--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \usepackage{xfrac}
 \usepackage{bm}
 \usepackage{stmaryrd}
+\usepackage{textcomp}
 
 \usepackage{threeparttable, tablefootnote}
 
@@ -63,7 +64,7 @@
 
 \usepackage{tikz}
 \usepackage{tkz-euclide}
-\usetikzlibrary{positioning, arrows, decorations, shapes}
+\usetikzlibrary{positioning, arrows, decorations, shapes, fit, backgrounds}
 \usetikzlibrary{shapes.geometric,arrows}
 \definecolor{illiniblue}{HTML}{B1C6E2}
 \definecolor{illiniorange}{HTML}{f8c2a2}
@@ -72,6 +73,8 @@
 \tikzstyle{object} = [ellipse, minimum width=2cm, thick, minimum height=2.2cm, text centered, draw=black, fill=illiniorange, text width=12em]
 \tikzstyle{decision} = [diamond, thick, aspect=2, minimum width=2cm, minimum height=2cm, text centered, draw=black, fill=green, text width=6em]
 \tikzstyle{arrow} = [thick,->,>=stealth]
+\tikzstyle{solver} = [rectangle, rounded corners, thick, minimum width=3cm, minimum height=1.5cm, text centered, draw=black, fill=illiniblue, text width=7em]
+\tikzstyle{bound} = [rectangle, rounded corners, thick, draw=black]
 
 \usepackage[ruled,linesnumbered,lined]{algorithm2e}
 \SetArgSty{textrm}
